--- a/Tiny_Object_Detection_Normalized_Gaussian_Wasserstein_Distance.ipynb
+++ b/Tiny_Object_Detection_Normalized_Gaussian_Wasserstein_Distance.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/bhyun-kim/NWD/blob/main/Tiny_Object_Detection_Normalized_Gaussian_Wasserstein_Distance.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "tJxJHruNLb7Y"
       },
       "source": [
@@ -26,18 +36,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Wi4LPmsR66sy",
-        "outputId": "db5914ae-2085-41fb-bc5e-da2d8ef7c66c"
+        "outputId": "db6d475f-5373-4394-bd69-b3f68e4abf7c"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "nvcc: NVIDIA (R) Cuda compiler driver\n",
             "Copyright (c) 2005-2020 NVIDIA Corporation\n",
@@ -67,51 +77,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gkGnB9WyHSXB",
-        "outputId": "783d4d44-0789-4ef2-8128-e9b034a19b9d"
+        "outputId": "4aad6e96-02bb-4f68-8c9b-4b6e01bec14f"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Looking in links: https://download.pytorch.org/whl/torch_stable.html\n",
-            "Requirement already satisfied: torch==1.5.1+cu101 in /usr/local/lib/python3.7/dist-packages (1.5.1+cu101)\n",
-            "Requirement already satisfied: torchvision==0.6.1+cu101 in /usr/local/lib/python3.7/dist-packages (0.6.1+cu101)\n",
-            "Requirement already satisfied: future in /usr/local/lib/python3.7/dist-packages (from torch==1.5.1+cu101) (0.16.0)\n",
+            "Collecting torch==1.5.1+cu101\n",
+            "  Downloading https://download.pytorch.org/whl/cu101/torch-1.5.1%2Bcu101-cp37-cp37m-linux_x86_64.whl (704.4 MB)\n",
+            "\u001b[K     |████████████████████████████████| 704.4 MB 1.3 kB/s \n",
+            "\u001b[?25hCollecting torchvision==0.6.1+cu101\n",
+            "  Downloading https://download.pytorch.org/whl/cu101/torchvision-0.6.1%2Bcu101-cp37-cp37m-linux_x86_64.whl (6.6 MB)\n",
+            "\u001b[K     |████████████████████████████████| 6.6 MB 53.2 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: future in /usr/local/lib/python3.7/dist-packages (from torch==1.5.1+cu101) (0.16.0)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from torch==1.5.1+cu101) (1.19.5)\n",
-            "Requirement already satisfied: pillow>=4.1.1 in /usr/local/lib/python3.7/dist-packages (from torchvision==0.6.1+cu101) (7.0.0)\n",
-            "Looking in links: https://download.openmmlab.com/mmcv/dist/cu101/torch1.5.0/index.html\n",
-            "Requirement already satisfied: mmcv-full in /usr/local/lib/python3.7/dist-packages (1.4.1)\n",
-            "Requirement already satisfied: pyyaml in /usr/local/lib/python3.7/dist-packages (from mmcv-full) (3.13)\n",
-            "Requirement already satisfied: opencv-python>=3 in /usr/local/lib/python3.7/dist-packages (from mmcv-full) (4.1.2.30)\n",
-            "Requirement already satisfied: yapf in /usr/local/lib/python3.7/dist-packages (from mmcv-full) (0.31.0)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from mmcv-full) (1.19.5)\n",
-            "Requirement already satisfied: addict in /usr/local/lib/python3.7/dist-packages (from mmcv-full) (2.4.0)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.7/dist-packages (from mmcv-full) (21.3)\n",
-            "Requirement already satisfied: Pillow in /usr/local/lib/python3.7/dist-packages (from mmcv-full) (7.0.0)\n",
-            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging->mmcv-full) (3.0.6)\n",
-            "Cloning into 'mmdetection'...\n",
-            "remote: Enumerating objects: 22371, done.\u001b[K\n",
-            "remote: Total 22371 (delta 0), reused 0 (delta 0), pack-reused 22371\u001b[K\n",
-            "Receiving objects: 100% (22371/22371), 25.46 MiB | 28.19 MiB/s, done.\n",
-            "Resolving deltas: 100% (15653/15653), done.\n",
-            "/content/mmdetection\n",
-            "Obtaining file:///content/mmdetection\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (from mmdet==2.19.1) (3.2.2)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from mmdet==2.19.1) (1.19.5)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from mmdet==2.19.1) (1.15.0)\n",
-            "Requirement already satisfied: terminaltables in /usr/local/lib/python3.7/dist-packages (from mmdet==2.19.1) (3.1.10)\n",
-            "Requirement already satisfied: pycocotools in /usr/local/lib/python3.7/dist-packages (from mmdet==2.19.1) (2.0.3)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->mmdet==2.19.1) (3.0.6)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->mmdet==2.19.1) (2.8.2)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->mmdet==2.19.1) (1.3.2)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib->mmdet==2.19.1) (0.11.0)\n",
-            "Requirement already satisfied: setuptools>=18.0 in /usr/local/lib/python3.7/dist-packages (from pycocotools->mmdet==2.19.1) (57.4.0)\n",
-            "Requirement already satisfied: cython>=0.27.3 in /usr/local/lib/python3.7/dist-packages (from pycocotools->mmdet==2.19.1) (0.29.24)\n",
-            "Installing collected packages: mmdet\n",
-            "  Running setup.py develop for mmdet\n",
-            "Successfully installed mmdet-2.19.1\n",
-            "Requirement already satisfied: Pillow==7.0.0 in /usr/local/lib/python3.7/dist-packages (7.0.0)\n"
+            "Requirement already satisfied: pillow>=4.1.1 in /usr/local/lib/python3.7/dist-packages (from torchvision==0.6.1+cu101) (7.1.2)\n",
+            "Installing collected packages: torch, torchvision\n",
+            "  Attempting uninstall: torch\n",
+            "    Found existing installation: torch 1.10.0+cu111\n",
+            "    Uninstalling torch-1.10.0+cu111:\n"
           ]
         }
       ],
@@ -2428,7 +2414,8 @@
         "_vYQF5K2NqqI"
       ],
       "name": "Tiny Object Detection : Normalized Gaussian Wasserstein Distance.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
