Train for Epoch 12 (NWD), AP small, AP medium, AP large

--- a/Tiny_Object_Detection_Normalized_Gaussian_Wasserstein_Distance.ipynb
+++ b/Tiny_Object_Detection_Normalized_Gaussian_Wasserstein_Distance.ipynb
@@ -1368,7 +1368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "U5fmdtQxa89M",
         "outputId": "f2df8748-700d-4ac3-a0ff-5b4d9d2b1cb2",
@@ -2290,7 +2290,83 @@
             "+-----------------+-----+-------+--------+-------+\n",
             "2021-12-29 09:26:08,239 - mmdet - INFO - Epoch(val) [11][548]\tmAP: 0.3714\n",
             "2021-12-29 09:28:51,394 - mmdet - INFO - Epoch [12][500/3236]\tlr: 2.500e-05, eta: 0:13:40, time: 0.326, data_time: 0.009, memory: 5426, loss_rpn_cls: 0.0208, loss_rpn_bbox: 0.0613, loss_cls: 0.3603, acc: 87.6790, loss_bbox: 0.6255, loss: 1.0680\n",
-            "2021-12-29 09:31:31,001 - mmdet - INFO - Epoch [12][1000/3236]\tlr: 2.500e-05, eta: 0:11:10, time: 0.319, data_time: 0.006, memory: 5426, loss_rpn_cls: 0.0206, loss_rpn_bbox: 0.0606, loss_cls: 0.3648, acc: 87.5455, loss_bbox: 0.6287, loss: 1.0747\n"
+            "2021-12-29 09:31:31,001 - mmdet - INFO - Epoch [12][1000/3236]\tlr: 2.500e-05, eta: 0:11:10, time: 0.319, data_time: 0.006, memory: 5426, loss_rpn_cls: 0.0206, loss_rpn_bbox: 0.0606, loss_cls: 0.3648, acc: 87.5455, loss_bbox: 0.6287, loss: 1.0747\n",
+            "2021-12-29 09:34:12,718 - mmdet - INFO - Epoch [12][1500/3236]\tlr: 2.500e-05, eta: 0:08:41, time: 0.323, data_time: 0.006, memory: 5426, loss_rpn_cls: 0.0203, loss_rpn_bbox: 0.0606, loss_cls: 0.3644, acc: 87.6602, loss_bbox: 0.6205, loss: 1.0658\n",
+            "2021-12-29 09:36:54,515 - mmdet - INFO - Epoch [12][2000/3236]\tlr: 2.500e-05, eta: 0:06:11, time: 0.324, data_time: 0.006, memory: 5426, loss_rpn_cls: 0.0206, loss_rpn_bbox: 0.0611, loss_cls: 0.3618, acc: 87.6141, loss_bbox: 0.6278, loss: 1.0712\n",
+            "2021-12-29 09:39:36,123 - mmdet - INFO - Epoch [12][2500/3236]\tlr: 2.500e-05, eta: 0:03:41, time: 0.323, data_time: 0.006, memory: 5426, loss_rpn_cls: 0.0210, loss_rpn_bbox: 0.0607, loss_cls: 0.3659, acc: 87.5296, loss_bbox: 0.6250, loss: 1.0726\n",
+            "2021-12-29 09:42:16,061 - mmdet - INFO - Epoch [12][3000/3236]\tlr: 2.500e-05, eta: 0:01:11, time: 0.320, data_time: 0.006, memory: 5426, loss_rpn_cls: 0.0197, loss_rpn_bbox: 0.0600, loss_cls: 0.3585, acc: 87.7734, loss_bbox: 0.6170, loss: 1.0552\n",
+            "2021-12-29 09:43:32,543 - mmdet - INFO - Saving checkpoint at 12 epochs\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>>>>>>>>>>>>>>>>>>>>>>>>>>>>] 548/548, 12.7 task/s, elapsed: 43s, ETA:     0sYou are using this code.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "2021-12-29 09:44:18,032 - mmdet - INFO - Scale range (1, 1024)\n",
+            "2021-12-29 09:44:18,035 - mmdet - INFO - \n",
+            "+-----------------+------+-------+--------+-------+\n",
+            "| class           | gts  | dets  | recall | ap    |\n",
+            "+-----------------+------+-------+--------+-------+\n",
+            "| pedestrian      | 7746 | 11578 | 0.549  | 0.449 |\n",
+            "| people          | 4631 | 6289  | 0.512  | 0.394 |\n",
+            "| bicycle         | 1053 | 1851  | 0.288  | 0.150 |\n",
+            "| car             | 6902 | 17512 | 0.739  | 0.647 |\n",
+            "| van             | 936  | 3035  | 0.404  | 0.258 |\n",
+            "| truck           | 289  | 1319  | 0.363  | 0.191 |\n",
+            "| tricycle        | 620  | 1158  | 0.360  | 0.236 |\n",
+            "| awning-tricycle | 305  | 486   | 0.256  | 0.103 |\n",
+            "| bus             | 116  | 391   | 0.422  | 0.324 |\n",
+            "| motor           | 3977 | 5683  | 0.591  | 0.479 |\n",
+            "| others          | 13   | 20    | 0.000  | 0.000 |\n",
+            "+-----------------+------+-------+--------+-------+\n",
+            "| mAP             |      |       |        | 0.294 |\n",
+            "+-----------------+------+-------+--------+-------+\n",
+            "2021-12-29 09:44:18,039 - mmdet - INFO - Scale range (1024, 9216)\n",
+            "2021-12-29 09:44:18,041 - mmdet - INFO - \n",
+            "+-----------------+------+-------+--------+-------+\n",
+            "| class           | gts  | dets  | recall | ap    |\n",
+            "+-----------------+------+-------+--------+-------+\n",
+            "| pedestrian      | 1075 | 11578 | 0.811  | 0.763 |\n",
+            "| people          | 489  | 6289  | 0.636  | 0.550 |\n",
+            "| bicycle         | 231  | 1851  | 0.506  | 0.393 |\n",
+            "| car             | 6383 | 17512 | 0.909  | 0.883 |\n",
+            "| van             | 924  | 3035  | 0.681  | 0.572 |\n",
+            "| truck           | 374  | 1319  | 0.471  | 0.299 |\n",
+            "| tricycle        | 413  | 1158  | 0.380  | 0.248 |\n",
+            "| awning-tricycle | 222  | 486   | 0.203  | 0.104 |\n",
+            "| bus             | 103  | 391   | 0.650  | 0.583 |\n",
+            "| motor           | 902  | 5683  | 0.667  | 0.570 |\n",
+            "| others          | 17   | 20    | 0.000  | 0.000 |\n",
+            "+-----------------+------+-------+--------+-------+\n",
+            "| mAP             |      |       |        | 0.451 |\n",
+            "+-----------------+------+-------+--------+-------+\n",
+            "2021-12-29 09:44:18,043 - mmdet - INFO - Scale range (9216, 4000000)\n",
+            "2021-12-29 09:44:18,045 - mmdet - INFO - \n",
+            "+-----------------+-----+-------+--------+-------+\n",
+            "| class           | gts | dets  | recall | ap    |\n",
+            "+-----------------+-----+-------+--------+-------+\n",
+            "| pedestrian      | 23  | 11578 | 0.957  | 0.906 |\n",
+            "| people          | 5   | 6289  | 1.000  | 0.560 |\n",
+            "| bicycle         | 3   | 1851  | 0.333  | 0.111 |\n",
+            "| car             | 779 | 17512 | 0.914  | 0.891 |\n",
+            "| van             | 115 | 3035  | 0.670  | 0.508 |\n",
+            "| truck           | 87  | 1319  | 0.598  | 0.393 |\n",
+            "| tricycle        | 12  | 1158  | 0.583  | 0.402 |\n",
+            "| awning-tricycle | 5   | 486   | 0.200  | 0.100 |\n",
+            "| bus             | 32  | 391   | 0.406  | 0.337 |\n",
+            "| motor           | 7   | 5683  | 0.571  | 0.333 |\n",
+            "| others          | 2   | 20    | 0.000  | 0.000 |\n",
+            "+-----------------+-----+-------+--------+-------+\n",
+            "| mAP             |     |       |        | 0.413 |\n",
+            "+-----------------+-----+-------+--------+-------+\n",
+            "2021-12-29 09:44:18,078 - mmdet - INFO - Epoch(val) [12][548]\tmAP: 0.3860\n"
           ]
         }
       ],
